--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -59,6 +59,31 @@
   transition: background-color 0.2s;
 }
 
-.countdownButton:hover {
+.countdownButton img {
+  width: 1rem;
+  height: 1rem;
+
+  margin-left: 0.5rem;
+}
+
+.countdownButton:not(:disabled):hover {
   background: var(--blue-dark);
+}
+
+.countdownButtonActive {
+  background: var(--white);
+  color: var(--title);
+  transition: background-color 0.2s;
+}
+
+.countdownButtonActive:not(:disabled):hover {
+  background: var(--red);
+  color: var(--white);
+}
+
+.countdownButton:disabled {
+  background: var(--white);
+  color: var(--text);
+  border-bottom: 3px solid var(--green);
+  cursor: not-allowed;
 }
